# WhisperSTT

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/hiclone/whisperstt/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/hiclone/whisperstt/: AdvancedLoggingSystem.kt  AudioCapture.kt  ImprovedWhisperStreamingProcessor.kt  LocalAgreementProcessor.kt  MainActivity.kt  RealtimePerformanceMonitor.kt  RealtimeProcessor.kt  SilenceManager.kt  SlidingWindowProcessor.kt  StreamingProcessorType.kt  StreamingSTTUI.kt  TrueStreamingSTTProcessor.kt  WhisperSTT.kt
app/src/main/java/com/hiclone/whisperstt/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/hiclone/whisperstt/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
